using UnityEngine;

namespace Utils {
    public static class Constants {
        //Hierarchy Names
        public const string HIERARCHY_PLAYER = "Adventurer";

        //Animator
        public const string ANIM_IS_RUNNING = "IsRunning";
        public const string ANIM_IS_FALLING = "IsFalling";
        public const string ANIM_IS_WALL_SLIDING = "IsWallSliding";
        public const string ANIM_IS_SLIDING = "IsSliding";
        public const string ANIM_JUMP = "Jump";
        public const string ANIM_FALL = "Fall";
        public const string ANIM_ATTACK = "Attack";
        public const string ANIM_ATTACK_COUNTER = "AttackNumber";

        //Tags
        public const string TAG_GROUND = "Ground";
    }
}